// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <div
    className="display-flex-center"
  >
    <SearchBox
      autoFocus={true}
      onChange={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="hotspots.assignee.select_user"
    />
  </div>
</Fragment>
`;

exports[`should render correctly: loading 1`] = `
<Fragment>
  <div
    className="display-flex-center"
  >
    <SearchBox
      autoFocus={true}
      onChange={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="hotspots.assignee.select_user"
    />
    <DeferredSpinner
      className="spacer-left"
      timeout={100}
    />
  </div>
</Fragment>
`;

exports[`should render correctly: open 1`] = `
<Fragment>
  <div
    className="display-flex-center"
  >
    <SearchBox
      autoFocus={true}
      onChange={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="hotspots.assignee.select_user"
    />
  </div>
  <div
    className="position-relative"
  >
    <DropdownOverlay
      noPadding={true}
      placement="bottom-left"
    >
      <div
        className="padded"
      >
        no_results
      </div>
    </DropdownOverlay>
  </div>
</Fragment>
`;

exports[`should render correctly: open with results 1`] = `
<Fragment>
  <div
    className="display-flex-center"
  >
    <SearchBox
      autoFocus={true}
      onChange={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="hotspots.assignee.select_user"
    />
  </div>
  <div
    className="position-relative"
  >
    <DropdownOverlay
      noPadding={true}
      placement="bottom-left"
    >
      <ul
        className="hotspot-assignee-search-results"
      >
        <li
          className="padded"
          key="john.doe"
          onClick={[Function]}
        >
          <Connect(Avatar)
            className="spacer-right"
            name="John Doe"
            size={16}
          />
          John Doe
        </li>
        <li
          className="padded active"
          key="highlighted"
          onClick={[Function]}
        >
          <Connect(Avatar)
            className="spacer-right"
            name="John Doe"
            size={16}
          />
          John Doe
        </li>
      </ul>
    </DropdownOverlay>
  </div>
</Fragment>
`;
